# meraki-homeassistant

./: .bandit.yaml  .bumpversion.cfg  .coverage  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pip-audit.json  .pre-commit-config.yaml  .python-version  404.html  =1.36.0  =2.6.2  AGENTS.md  CHANGELOG.md  CLOSING_COMMENT.md  COMPLIANCE_REPORT.md  CONTRIBUTING.md  DESIGN-Event-Log-Viewer.md  DESIGN-Parental-Controls.md  DESIGN.md  DEVELOPMENT.md  DOCS.md  HANDOVER_INSTRUCTIONS.md  MERGE_PLAN.md  NEW_ISSUE.md  PIPELINE_BEST_PRACTICES.md  README.md  REFACTOR.md  RELEASE_NOTES_BETA.md  REQUIREMENTS-WEBUI.md  REQUIREMENTS.md  REQUIREMENTS_WEBUI.md  REQUIREMENTS_WEBUI_V2.md  ROADMAP.md  SYSTEM_REQUIREMENTS.md  TODO.md  agents.md  beta_diff.txt  blocked_message.md  (+68 more)
.devcontainer/: devcontainer.json
.github/: AGENT_WORKFLOWS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yaml  jules.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  cursor_task.yml  feature_request.yml  jules-task.yml  jules_task.yml
.github/workflows/: _reusable-ci-base.yml  _reusable-deploy.yml  _reusable-lint.yml  _reusable-smoke-test.yml  agent-cognitive-loop.yml  agent-healer.yml  agent-jules.yml  beta-ci.yaml  beta-release.yml  beta-validation.yaml  beta-version-update.yaml  beta_release.yml  branch-guard.yaml  build-runner-image.yaml  builder.yaml  code-review.yaml  code-review.yaml.disabled  conflict-watchdog.yaml  cursor-fix.yaml  cursor-issue-handler.yaml  cursor-launcher.yaml  cursor-review.yaml  deploy-docs.yml  deploy-hacs.yml  deploy-local.yml  deploy-staging.yaml  generate-changelog.yaml  hassfest.yaml  increment_version.py  increment_version.yaml  increment_version.yml  jules-ci-fix.yaml  jules-fix-merger.yaml  jules-handoff-detector.yaml  jules-healer.yml  jules-needs-help.yaml  (+25 more)
config/: home-assistant.log.1  home-assistant_v2.db
configuration/: index.html
custom_components/: __init__.py
docker-runner/: Dockerfile  entrypoint.sh
docs/: AGENTS.md  AGENT_FILE_CLEANUP.md  AGENT_PRECOMMIT_SUGGESTION.md  ARCHITECTURE.md  DESIGN-Event-Log-Viewer.md  DESIGN-Guest-Wi-Fi-Management.md  DESIGN-Parental-Controls.md  INTEGRATION_IMPROVEMENTS_PLAN.md  QUALITY_SCALE.md  README.md  REFACTOR-cameras.md  REFACTOR-layered-architecture.md  REFACTOR-switches.md  REFACTOR-wireless.md  REQUIREMENTS-WEBUI.md  REQUIREMENTS.md  TESTING_PLAN.md  configuration.md  development.md  entities.md  index.md  meraki_ha_webui_refactor.md  quality-scale-checklist.md  roadmap.md  template.md  troubleshooting.md
entities/: index.html
homeassistant/: config_entries.py  core.py
meraki-homeassistant/: Dockerfile  config.yaml  const.py  merakisync.py  run.sh  strings.json
meraki_api/: __init__.py  appliance.py  authentication.py  exceptions.py  wireless.py
scripts/: delete_orphaned_entities.sh  find_orphaned_entities.py  generate_screenshots.py  query_logs.py  run-tests.sh  smoke_test_probe.py
search/: search_index.json
site/: 404.html  index.html
tests/: E2E_INSTRUCTIONS.md  __init__.py  conftest.py  const.py  repro_issue_group_policy.py  test_async_logging.py  test_authentication.py  test_camera.py  test_camera_control.py  test_config_flow.py  test_coordinator.py  test_coordinator_debounce.py  test_coordinator_entity_priority.py  test_coordinator_refactor.py  test_coordinator_ssid_population.py  test_device_association.py  test_device_naming.py  test_device_tracker.py  test_diagnostics.py  test_e2e_device_status.py  test_e2e_ipsk.py  test_e2e_live.py  test_e2e_web_ui.py  test_enabled_networks.py  test_entity.py  test_entity_naming.py  test_frontend.py  test_init.py  test_integration_setup.py  test_main_init.py  test_meraki_data_coordinator.py  test_meraki_data_coordinator_entity_priority.py  test_naming_conventions.py  test_options.py  test_options_flow.py  test_reauth_flow.py  test_refactor.py  test_reproduction_camera_status.py  test_scanning_api.py  test_simple.py  (+9 more)
tools/: check_artifacts.py  resolve_conflicts.py
troubleshooting/: index.html
verification/: index.html  meraki-panel.js  verify.py
(+792 files in other folders)
