[project]
name = "meraki-homeassistant"
version = "0.0.0"
description = "Meraki integration for Home Assistant"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "homeassistant==2025.11.0",
    "uv>=0.9.6",
    "urllib3>=2.6.0",
    "aiofiles==23.2.1",
    "types-aiofiles==25.1.0.20251011",
    "meraki==1.40.1",
    "PyTurboJPEG==1.7.2",
    "ruff==0.5.5",
    "pip-audit==2.7.3",
    "bandit[toml]==1.7.9",
    "mypy==1.11.0",
    "voluptuous==0.15.2",
    "pyyaml==6.0.3",
    "playwright",
    "pytest-homeassistant-custom-component==0.13.294",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.2.0",
    "codecov",
    "pycares==4.11.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "custom_components"
]
asyncio_mode = "auto"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles"
ignore_missing_imports = true

[tool.ruff]
exclude = [".pyenv"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["D100", "D104", "D107", "D211", "D212"]
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.codespell]
skip = "*meraki-panel.js,*/dist/*"

[tool.bandit]
exclude_dirs = ["tests", "node_modules", "custom_components/meraki_ha/core/utils", ".venv", "venv"]
skips = ["B101", "B104", "B105", "B106", "B107", "B110", "B112", "B311", "B404", "B603", "B605", "B607"]
